feat: Add Product Facade Layer and Modify related Unit Tests